added protractor tests
refactored directives, filters; added protractor tests; code format update; start ui skeleton for setup

--- a/src/modules/public-ledwax-web-ui/app/partials/leds.html
+++ b/src/modules/public-ledwax-web-ui/app/partials/leds.html
@@ -1,5 +1,5 @@
-<p>This is the partial for leds view.</p>
-<p>
-  Showing of 'appVersion' filter:
-  {{ 'Current version is v%VERSION%.' | appVersion }}
-</p>
+<div ng-controller="LEDsCtrl">
+	<p>This is the partial for leds view.</p>
+	<p>Showing of 'appVersion' filter: {{ 'Current version is
+		v%VERSION%.' | appVersion }}</p>
+</div>
