--- a/src/modules/public-ledwax-web-ui/app/partials/login.html
+++ b/src/modules/public-ledwax-web-ui/app/partials/login.html
@@ -11,7 +11,7 @@
 					<label for="userName">User&nbsp;Name:&nbsp;</label>
 				</div>
 				<div id="" class="">
-					<input type="text" name="userName" id="userName"
+					<input type="text" name="username" id="userName"
 						ng-model="userSession.username" required="required">
 				</div>
 			</div>
