--- a/src/modules/public-ledwax-web-ui/app/partials/leds.html
+++ b/src/modules/public-ledwax-web-ui/app/partials/leds.html
@@ -1,5 +1,82 @@
 <div ng-controller="LEDsCtrl">
-	<p>This is the partial for leds view.</p>
-	<p>Showing of 'appVersion' filter: {{ 'Current version is
-		v%VERSION%.' | appVersion }}</p>
+	<div class="wrap-devices-table" class="">
+		<div class="devices-table">
+			<div class="row">
+				<div class="col-sm-6">
+					<a
+						ng:click="sortBy('name', 'Stored', devicesStored, 'pagedDevicesStored')">Name&nbsp;<span
+						class="glyphicon glyphicon-sort-by-attributes" aria-hidden="true"
+						style="color: inherit;"></span></a>
+				</div>
+				<div class="col-sm-6">
+					<a
+						ng:click="sortBy('type', 'Stored', devicesStored, 'pagedDevicesStored')">Type&nbsp;<span
+						class="glyphicon glyphicon-sort-by-attributes" aria-hidden="true"
+						style="color: inherit;"></span></a>
+				</div>
+			</div>
+			<div
+				ng:repeat="device in pagedItemsStored[currentPageStored - 1] | filter:query">
+				<div class="row" ng:click="toggleDeviceDetailsStored(device)">
+					<div class="col-sm-6">{{device.deviceNameFW}}</div>
+					<div class="col-sm-5">{{device.devTypeFW}}</div>
+					<div class="col-sm-1">
+						<button id="butt_toggle_dev_details_{{device.id}}"
+							class="btn btn-primary">
+							<span style="color: white;"
+								class="glyphicon glyphicon-collapse-{{device.toggleShowDetails == true ? 'up' : 'down'}}"
+								aria-hidden="true"></span>
+						</button>
+					</div>
+				</div>
+				<div id="dev_details_{{device.id}}"
+					class="row {{device.toggleShowDetails == true ? 'show' : 'hide'}}">
+					<div class="wrap-device-details-vars col-sm-12">
+						<pre class="pagination-footer">LED Strips: {{device.ledstripsPagination.currentPage}} of {{device.ledstripsPagination.pagedLEDStrips.length}}</pre>
+						<ul uib-pagination
+							total-items="device.ledstripsPagination.totalItems"
+							ng-model="device.ledstripsPagination.currentPage"
+							items-per-page="device.ledstripsPagination.pageSize"
+							class="pagination-sm" boundary-link-numbers="true" rotate="false"></ul>
+						<dl>
+							<dt>
+								<span class="glyphicon glyphicon-flag" aria-hidden="true"></span>&nbsp;LED
+								Strips (total of {{device.numStrips}}):
+							</dt>
+							<dd
+								ng:repeat="ledstrip in device.ledstripsPagination.pagedLEDStrips[device.ledstripsPagination.currentPage - 1] | filter:query">
+								<ul class="list-group">
+									<li class="list-group-item">index: {{ledstrip.stripIndex}}</li>
+									<li class="list-group-item">type: {{ledstrip.stripType}}</li>
+									<li class="list-group-item">display
+										mode:{{ledstrip.dispMode}}</li>
+									<li class="list-group-item wrap-color-picker">color: <color-picker
+											ng-model="ledstrip.modeColorHex" options="cpOptions"
+											event-api="cpEventAPI"></color-picker></li>
+									<li class="list-group-item">brightness:
+										{{ledstrip.brightness}}</li>
+									<li class="list-group-item">color hold time:
+										{{ledstrip.colorTime}}</li>
+									<li class="list-group-item">fade mode:
+										{{ledstrip.fadeMode}}</li>
+									<li class="list-group-item">fade transition time:
+										{{ledstrip.fadeTime}}</li>
+								</ul>
+							</dd>
+						</dl>
+						<ul uib-pagination
+							total-items="device.ledstripsPagination.totalItems"
+							ng-model="device.ledstripsPagination.currentPage"
+							items-per-page="device.ledstripsPagination.pageSize"
+							class="pagination-sm" boundary-link-numbers="true" rotate="false"></ul>
+						<pre class="pagination-footer">LED Strips: {{device.ledstripsPagination.currentPage}} of {{device.ledstripsPagination.pagedLEDStrips.length}}</pre>
+					</div>
+				</div>
+			</div>
+		</div>
+		<ul uib-pagination total-items="items-per-page"
+			ng-model="pagedItemsStored" max-size="pageSizeStored"
+			class="pagination-sm" boundary-link-numbers="true" rotate="false"></ul>
+		<pre class="pagination-footer">Devices Page: {{currentPageStored}} of {{pagedItemsStored.length}}</pre>
+	</div>
 </div>
