--- a/src/modules/public-ledwax-web-ui/app/partials/tab_newdevices.html
+++ b/src/modules/public-ledwax-web-ui/app/partials/tab_newdevices.html
@@ -37,7 +37,7 @@
 							<dt></dt>
 							<dd>
 								<button id="butt_store_device_{{device.id}}"
-									ng:click="saveNewDevice(device)" class="btn btn-primary">
+									ng:click="saveNewDevice(device)" class="btn btn-primary btn-lg">
 									<span style="color: white;" class="glyphicon glyphicon-save"
 										aria-hidden="true"></span>&nbsp;Store Device ({{device.name}})
 								</button>
